logs/jarvis-pentest.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jarvis_pentest-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/pentest'...
Compiling './lib/python3.5/site-packages/pentest/__main__.py'...
***   File "./lib/python3.5/site-packages/pentest/__main__.py", line 20
    print '[!] File /etc/jarvis.conf does not exist, please create it'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pentest/command.py'...
***   File "./lib/python3.5/site-packages/pentest/command.py", line 123
    print '[!] Invalid argument position : %s' % pos
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pentest/hooks'...
Compiling './lib/python3.5/site-packages/pentest/hooks/nmap.py'...
***   File "./lib/python3.5/site-packages/pentest/hooks/nmap.py", line 25
    print cmd.args
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pentest/manager.py'...
***   File "./lib/python3.5/site-packages/pentest/manager.py", line 73
    print '[i] A pentest located at %s has been stacked' % os.path.abspath(path)
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pentest/tests'...
Compiling './lib/python3.5/site-packages/pentest/utils.py'...
***   File "./lib/python3.5/site-packages/pentest/utils.py", line 84
    except NoOptionError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slugify-0.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
